Fix gap between corner and headers

--- a/styles/web/common/spreadsheet.less
+++ b/styles/web/common/spreadsheet.less
@@ -182,6 +182,8 @@
     top: 0;
     left: 0;
     z-index: 10000;
+    border-width: 0 1px 1px 0;
+    border-style: solid;
 
     &:after {
         content: "";
